# GPTCovLet

./: .coverage  .gitignore  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  staticPageUnitTest.html
.github/: build.yml
.github/workflows/: build.yml
GPT_Cov_Let/: .scrapeToGPT.py.swp  __main__.py  scrapeToGPT.py
GPT_Cov_Let/tests/: test_all.py
GPT_Cov_Let/tests/staticPageUnitTest_files/: 1519856543114  1634935840889  1634936600805  1658240804854
source/: conf.py  index.rst
staticPageUnitTest_files/: 1519856440986  1519856445322  1519860868522  1519878455712  1519949944496  1624372496515  1656678972143  1659435977015  1670892990682  1673272882924  2zyozgiwi5y6ap0ryoxmgaefh  36wwpidml0dlbzoyjkknbxsq4  dest5.html  edgvkdu3etzsj9dvcey5j7rja  radar.html
