[build-system]
requires = [
	"setuptools",
	"setuptools-scm",
	"wheel",
]
build-backend="setuptools.build_meta"

[project]
name = "GPTCovLet"
version = "0.0.1"
requires-python = ">=3.9"

dependencies = [
	"openai",
	"selenium",
	"bs4",
]
[project.optional-dependencies]
develop = [
	"black>=23.1.0",
	"pytest>=7.2.2",
	"check-manifest",
	"wheel",
]

[tool.pytest.ini_options]
asyncio_mode = 'strict'
testpaths = 'GPT_Cov_Let/tests'
